--- a/css/payroll_form.css
+++ b/css/payroll_form.css
@@ -1,63 +1,62 @@
-/* UC 1 */
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
+body{
+    margin:0px;
     height: 100%;
 }
 
-.header {
-    padding: 15px 0;
+.header{
+    padding:15px 0;
     background-color: #ffffff;
 }
 
-.header-content {
-    display: flex;
+.header-content{
+    display:flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    border: 0px solid green;
+    align-items:center;
+    border:0px solid green;
 }
 
-.logo-content {
+.logo-content{
     display: flex;
     flex-direction: row;
     align-items: center;
-    border: 0px solid green;
+    border:0px solid green;
     width: 80%;
 }
 
-.logo-content-img {
+.logo-content-img{
     border: solid 0px #42515f;
 }
 
-.emp-text {
-    font: normal normal bold 20px/25px Montserrat;
+.emp-text{
+    font: normal;
+    font-weight: bold;
     font-family: "Montserrat", sans-serif;
     letter-spacing: 0px;
     color: #82a70c;
     text-transform: capitalize;
 }
 
-.emp-payroll {
+.emp-payroll{
     color: #42515f;
 }
 
-/* UC 2 */
-.form-content {
-    min-height: calc(100% - 80px);
-    background-color: #f7f7f7;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 0px solid green;
+*{
+    box-sizing: border-box;
 }
 
-.form {
+.form-content{
+    min-height: calc(100% - 80px);
+   background-color: #f7f7f7;
+   display: flex;
+   justify-content: center;
+   align-items: center; 
+   border: 0px solid green;
+}
+
+.form{
     width: 65%;
-    padding: 44px 60px;
+    padding:  44px 60px;
     background: #ffffff 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
     border: 1px solid #f5f5f5;
@@ -65,7 +64,7 @@ body {
     opacity: 1;
 }
 
-.form-head {
+.form-head{
     font: normal normal bold 24px/37px Roboto;
     letter-spacing: 0px;
     color: #42515f;
@@ -74,7 +73,7 @@ body {
     padding-bottom: 20px;
 }
 
-.row-content {
+.row-content{
     display: flex;
     flex-direction: row;
     margin-bottom: 10px;
@@ -82,23 +81,23 @@ body {
     border: 0px solid green;
 }
 
-.label {
+.label{
     min-width: 140px;
 }
 
-label {
-    padding: 12px 12px 12px;
+label{
+    padding: 12px 12px 12px 0;
     display: inline-block;
 }
 
-.text {
+.text{
     font-size: 16px;
     color: #42515f;
     opacity: 1;
     font-family: Roboto;
 }
 
-.input {
+.input{
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -106,26 +105,24 @@ label {
     resize: vertical;
 }
 
-/* UC 3 */
-.profile-radio-content {
+.profile-radio-content{
     display: flex;
     flex-direction: row;
 }
 
-.profile-radio-content>label {
+.profile-radio-content > label{
     display: flex;
-    flex-direction: row;
+    flex-direction:  row;
     align-items: center;
 }
 
-.profile {
+.profile{
     width: 40px;
     border-radius: 50%;
     margin-left: 12px;
 }
 
-/* UC 5 */
-select {
+select{
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -136,23 +133,21 @@ select {
     background-color: transparent;
 }
 
-/* UC 6 */
-.buttonParent {
+.buttonParent{
     display: flex;
     margin-bottom: 10px;
     justify-content: space-between;
     margin-top: 20px;
 }
 
-.button {
+.button{
     font-size: 20px;
     font-family: Roboto;
     letter-spacing: 0px;
     color: #42515f;
     opacity: 1;
-    background: #E2E2E2 0% 0% no-repeat padding-box;
-    border: 2px solid #969696;
-    border-radius: 5px;
+    background: transparent;
+    border: none;
     font-weight: 400;
     min-width: 140px;
     padding: 7px 7px;
@@ -160,45 +155,62 @@ select {
     cursor: pointer;
 }
 
-.submitButton {
+.submitButton{
+    background-color: #f5f5f5;
     margin-right: 30px;
-    padding: 20px 40px;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
 }
 
-.cancelButton {
+.cancelButton{
     text-decoration: none;
     text-align: center;
-    padding: 20px 40px;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
 }
 
 .resetButton{
-    padding: 20px 40px;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
 }
 
-@media only screen and (max-width: 960px) {
-    .cancelButton {
+error-output{
+    margin-left: 10px;
+    font-size: 12px;
+    font-style: italic;
+    color: red;
+}
+
+@media only screen and (max-width: 960px){
+    .cancelButton{
         margin-left: 0px;
     }
-    .form {
-        width: 85%;
-        padding: 44px 20px;
-    }
 }
 
-@media only screen and (max-width: 600px) {
-    .form {
+@media only screen and (max-width: 600px){
+    .form{
         margin-top: 10px;
     }
-    .row {
+
+    .row{
         flex-direction: column;
     }
-    .uploadButton {
+
+    .uploadButton{
         justify-content: flex-start;
     }
-    .profile-radio-content {
+
+    .profile-radio-button{
         flex-flow: wrap;
     }
-    .submit-reset {
+
+    .submit-reset{
         width: 100%;
         display: flex;
         flex-grow: 1;
@@ -206,10 +218,12 @@ select {
         justify-content: space-between;
         margin-bottom: 20px;
     }
-    .submitButton {
+
+    .submitButton{
         margin: 0;
     }
-    .button-content {
+
+    .buttonParent{
         flex-direction: column-reverse;
         align-items: flex-start;
     }
